--- a/css/style.css
+++ b/css/style.css
@@ -19,4 +19,125 @@
 main{
     min-height: 100vh;
     background: linear-gradient(190deg, var(--primary-clr), var(--light-blue));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.calculator{
+    width: 90%;
+    border-radius: .5rem;
+    overflow: hidden;
+}
+
+.calculator .display{
+    background: rgba( 255, 255, 255, 0.2 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 6.5px );
+-webkit-backdrop-filter: blur( 6.5px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+    height: 120px;
+    margin-bottom: .5rem;
+    border-radius: .5rem;
+}
+
+.calculator .pad-grid-container{
+    padding: .5rem;
+    /* background-color: var(--secondary-color); */
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: .5rem;
+    grid-auto-rows: 45px;
+    
+}
+
+.calculator .pad-grid-container > div, .grid-numbers-block > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3rem;
+}
+
+
+.calculator .pad-grid-container > div{
+    /* color: var(--light-yellow); */
+    color: #fff;
+}
+
+.grid-numbers-block > div{
+    color: #fff;
+}
+
+.calculator .pad-grid-container .equals{
+    font-size: 1.5rem;
+}
+
+.minus{
+    grid-column: span 2;
+}
+
+.plus,  .equals{
+    grid-row: span 2;
+    grid-column-end: -1;
+}
+
+.equals{
+    background: linear-gradient(390deg, var(--secondary-color), var(--light-yellow));
+    border-radius: .5rem;
+    color: #fff !important;
+}
+
+
+
+.calculator .pad-grid-container .grid-numbers-block{
+    grid-column: 1 / span 3;
+    grid-row: 2 / span 4;
+    display: grid;
+    grid-template-areas: 
+        "sev eig nine"
+        "four five six"
+        "one two thr"
+        "ca zer c";
+    grid-auto-rows: 45px;
+    grid-auto-columns: 1fr;
+    gap: .5rem;
+    border: 1px solid rgba( 255, 255, 255, 0.5 );
+    border-radius: .5rem;
+}
+
+.grid-numbers-block .nine{grid-area: nine;}.grid-numbers-block .eight{grid-area: eig;}.grid-numbers-block .seven{grid-area: sev;}
+.grid-numbers-block .six {grid-area: six;}.grid-numbers-block .five{grid-area: five;}.grid-numbers-block .four{grid-area: four;}
+.grid-numbers-block .three{grid-area: thr;}.grid-numbers-block .two {grid-area: two;}.grid-numbers-block .one {grid-area: one;}
+.grid-numbers-block .zero{grid-area: zer;}.grid-numbers-block .clear-all{grid-area: ca;color: var(--light-yellow);}
+.grid-numbers-block .clear{grid-area: c;color: var(--light-yellow);}
+
+
+.input-btn{
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+.input-btn span{
+    position: absolute;
+    background: #fff;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    border-radius: 50%;
+    animation: animate 1s linear infinite;/*check backwards*/
+}
+
+@keyframes animate{
+    from{
+        width: 0;
+        height: 0;
+        opacity: 1;
+    }
+    to{
+        width: 500px;
+        height: 500px;
+        opacity: 0;
+    }
 }
