--- a/css/style.css
+++ b/css/style.css
@@ -54,12 +54,12 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     border-radius: .5rem;
     color: #fff;
     display: flex;
-    flex-direction: row-reverse;
+    justify-content: flex-end;
     align-items: flex-end;
     padding: 1rem;
     font-size: 1.5rem;
 }
-.calculator .display span{
+.calculator .display span.operator{
     color: var(--light-yellow);
     margin: 0 5px;
 }
